--- a/style.css
+++ b/style.css
@@ -480,7 +480,7 @@ cursor:url(https://i.postimg.cc/R0y2C3pb/cursor.png),auto
     z-index: 9;
 }
 .footer {
-    background:url('footer.png');
+    background:url('https://xatimg.com/image/CYHNKXT9IRdI.png');
     position: fixed;
     width: 100%;
     height: 68px;
