--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 :root {
     --font-1: 'Berkshire Swash', cursive;
+    --font-2: 'Poppins', sans-serif;
+    --font-3: 'Cookie', cursive;;
     --color-1:#3e3e3e;
-    --color-2:#fff;
+    --color-2:#eff1f4;
     --color-3:#89cb12;
-    --color-4:#1f1c1c;
-    --color-5:#565b75;
-    --color-6:#7a7a7a;
-    --color-7:#bfbfbf;
+    --color-4:#6d7277;
 }
 body {
     background:url('https://i.postimg.cc/k5N723Lm/bKvnSbX.png')center top repeat-x,
     url('https://i.postimg.cc/XqKTrGKn/1zqudergb.png')repeat    ,rgb(255,255,255);
+    margin: 0 0 100px;
     overflow: hidden;
 }
 html {
@@ -27,7 +27,138 @@ body::before {
     width: 100%;
     height: 10px;
     box-shadow: 0px 0px 10px color:var(--color-1);
-    z-index: 100;
+    z-index: 10;
+}
+*::-moz-selection {
+    background: #89cb12;
+    color: #fff;
+    text-shadow: none;
+}
+::-moz-selection {
+    background: #89cb12;
+    color: #fff;
+    text-shadow: none;
+}
+::selection {
+    background: #89cb12;
+    color: #fff;
+    text-shadow: none;
+}
+*::-moz-placeholder {
+    color: #89cb12;
+    font-size: 16px;
+    opacity: 1;
+}
+*::placeholder {
+    color: #89cb12;
+    font-size: 16px;
+    opacity: 1;
+}
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 0;
+}
+::-webkit-scrollbar-thumb {
+    background: #89cb12;
+    border-radius: 0;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #353431;
+}
+.profile-xat {
+    position: relative;
+    min-width: 320px;
+    height: 333px;
+    margin: 0 auto;
+}
+.profile-xat-bg {
+    position: absolute;
+    width: 100%;
+    height: 340px;
+    background:var(--color-1);
+    border-bottom: 6px solid transparent;
+    border-image: linear-gradient(90deg, #9df205, #89cb12);
+    border-image-slice: 1;
+}
+.profile-img {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+    display: block;
+    width: 160px;
+    height: 160px;
+    border: 8px solid #939393;
+    border-radius: 100%;
+    margin: 0 auto;
+    box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+    object-fit: cover;
+    transition: all 0.5s ease-in-out;
+    transform: rotate(5deg);
+    animation: circle 5s infinite ease;
+
+}
+@keyframes circle {
+  0% {
+    box-shadow: 0 0 0 20px rgba(255, 255, 255, 0.2);
+  }
+  50% {
+    box-shadow: 0 0 0 1px #afb3c6;
+  }
+  100% {
+    box-shadow: 0 0 0 15px #afb3c6;
+    box-shadow: 0 0 0 20px rgba(255, 255, 255, 0.2);
+  }
+}
+.xat-profile-name {
+    position: absolute;
+    top: 277px;
+    left: 0;
+    right: 0;
+    width: 230px;
+    height: 117px;
+    margin: 0 auto;
+    background:var(--color-2);
+    overflow: hidden;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .075);
+    -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, .075);
+    -ms-box-shadow: 0 6px 12px rgba(0, 0, 0, .075);
+    -o-box-shadow: 0 6px 12px rgba(0, 0, 0, .075);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .075);
+}
+.xat-gradient-bar {
+    position: absolute;
+    bottom: 0;
+    height: 8px;
+    width: 100%;
+    background-image: linear-gradient(90deg, #89cb12, #9df205);
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+.xat-profile-name p {
+    text-align: center !important;
+    margin: 1px 0 !important;
+}
+.xat-profile-name p:first-child {
+    font-family:var(--font-3);
+    font-size: 4.2rem;
+    font-weight: 300;
+    color:var(--color-1);
+    text-shadow: 2px 2px 2px rgba(0,0,0,.4);
+}
+.xat-profile-name p:nth-child(2) {
+    font-size: 19px !important;
+    font-family:var(--font-1);
+    color:var(--color-4);
+    text-shadow: 1px 1px 1px rgba(0,0,0,.4);
 }
 .butterflys {
     position: absolute;
@@ -125,7 +256,6 @@ body::before {
     animation: flutter-l 0.3s infinite ease-out;
     right: 55%;
 }
-
 @keyframes flutter-r {
     0%, 100% {
         transform: rotateY(0deg);
@@ -215,7 +345,7 @@ body::before {
     transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
-    background:var(--color-6);
+    background:var(--color-3);/*6*/
     border-radius: 0 100px 0 100px;
 }
 .butterfly-plant .wings {
@@ -239,12 +369,13 @@ body::before {
     top: 15px;
     left: -5px;
     border-radius: 25% 100% 0 50%;
-    background:var(--color-5);
-    background: linear-gradient(-90deg, #2b2b2b 0%, #3e3e3e 1%, #2b2b2b 68%, #2b2b2b 96%);
+    background:var(--color-8);
+    background: linear-gradient(-90deg, #2ecc71 0%, #89cb12 30%, #2ecc71 68%, #afb3c6 95%);
     transform-origin: bottom right;
     transform: rotate(-15deg);
     animation: wing-top-left-animation 500ms forwards alternate infinite;
     box-shadow: -5px 5px 10px rgba(0,0,0,.4) inset 1px -1px 20px 0px rgba(0,0,0,0.6);
+    border: 1px solid #a39d9f;
 }
 @keyframes wing-top-left-animation {
     from {
@@ -260,12 +391,13 @@ body::before {
     top: 15px;
     left: 105px;
     border-radius: 100% 25% 50% 0;
-    background:var(--color-5);
-    background: linear-gradient(90deg, #2b2b2b 0%, #3e3e3e 1%, #2b2b2b 68%, #2b2b2b 96%);
+    background:var(--color-8);
+    background: linear-gradient(90deg, #2ecc71 0%, #89cb12 30%, #2ecc71 68%, #afb3c6 95%);
     transform-origin: bottom left;
     transform: rotate(15deg);
     animation: wing-top-right-animation 500ms forwards alternate infinite;
     box-shadow: -5px 5px 10px rgba(0,0,0,.4) inset 1px -1px 20px 0px rgba(0,0,0,0.6);
+    border: 1px solid #a39d9f;
 }
 @keyframes wing-top-right-animation {
 from {
@@ -281,12 +413,13 @@ to {
     top: 115px;
     left: -6px;
     border-radius: 90% 0 70% 50%;
-    background:var(--color-5);
-    background: linear-gradient(225deg, #2b2b2b 0%, #3e3e3e 1%, #2b2b2b 68%, #2b2b2b 96%);
+    background:var(--color-8);
+    background: linear-gradient(225deg, #2ecc71 0%, #89cb12 30%, #2ecc71 68%, #afb3c6 95%);
     transform-origin: top right;
     transform: rotate(7deg);
     animation: wing-bottom-left-animation 500ms forwards alternate infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
     box-shadow: -5px 5px 10px rgba(0,0,0,.4) inset 1px -1px 20px 0px rgba(0,0,0,0.6);
+    border: 1px solid #a39d9f;
 }
 @keyframes wing-bottom-left-animation {
 from {
@@ -303,11 +436,12 @@ to {
     left: 105px;
     border-radius: 0 90% 50% 70%;
     background:var(--color-5);
-    background: linear-gradient(135deg, #2b2b2b 0%, #3e3e3e 1%, #2b2b2b 68%, #2b2b2b 96%); /*#afb3c6*/
+    background: linear-gradient(135deg, #2ecc71 0%, #89cb12 30%, #2ecc71 68%, #afb3c6 95%); /*#afb3c6*/
     transform-origin: top left;
     transform: rotate(-7deg);
     animation: wing-bottom-right-animation 500ms forwards alternate infinite cubic-bezier(0.25, 0.46, 0.45, 0.94);
     box-shadow: -5px 5px 10px rgba(0,0,0,.4) inset 1px -1px 20px 0px rgba(0,0,0,0.6);
+    border: 1px solid #a39d9f;
 }
 @keyframes wing-bottom-right-animation {
 from {
@@ -321,10 +455,10 @@ to {
 }
 .plant {
     position: absolute;
-    left: 100px;
-    bottom: 140px;
-    height: 300px;
-    width: 300px;
+    left: 0;
+    bottom: 130px;
+    height: 220px;
+    width: 220px;
 }
 .plant .flower {
     position: absolute;
@@ -342,6 +476,13 @@ to {
     top: 50%;
     left: 48%;
     background:var(--color-2);
+    box-shadow: inset 0 0 10px #B6BDC9;
+    -webkit-transition: .3s cubic-bezier(.24, .74, .58, 1);
+    -khtml-transition: .3s cubic-bezier(.24, .74, .58, 1);
+    -moz-transition: .3s cubic-bezier(.24, .74, .58, 1);
+    -ms-transition: .3s cubic-bezier(.24, .74, .58, 1);
+    -o-transition: .3s cubic-bezier(.24, .74, .58, 1);
+    transition: .3s cubic-bezier(.24, .74, .58, 1);
     z-index: 2;
 }
 .plant .flower .petals {
@@ -393,12 +534,12 @@ to {
     transform: translate(-40%, -105%) rotate(292deg);
 }
 .plant .flower1 {
-    top: 57%;
+    top: 10%;
     left: 2%;
 }
 .plant .flower2 {
-    top: 15%;
-    left: 52%;
+    top: 25%;
+    left: 70%;
     transform: scale(0.9);
 }
 .plant .flower2 .petal {
@@ -408,24 +549,24 @@ to {
     position: absolute;
     height: 50px;
     width: 110px;
-    left: 36%;
-    top: 113%;
+    left: 57%;
+    top: 110%;
     background-color: transparent;
     border-radius: 50% 50% 50% 90%;
     border: 8px solid;
-    border-color: transparent transparent  var(--color-7) transparent;
+    border-color: transparent transparent var(--color-4) transparent;
     transform: rotate(75deg);
 }
 .plant .stem2 {
     position: absolute;
-    height: 240px;
+    height: 140px;
     width: 180px;
     left: 25.5%;
     top: 20%;
     background-color: transparent;
     border-radius: 5% 90% 0 80%;
     border: 6px solid;
-    border-color: transparent var(--color-7) var(--color-7) transparent;
+    border-color: transparent var(--color-4) var(--color-4) transparent;
     transform: rotate(47deg);
 }
 .plant .leaf1 {
@@ -433,9 +574,9 @@ to {
     height: 40px;
     width: 44px;
     transform: translate(-50%, -50%) rotate(30deg);
-    left: 70%;
-    top: 74%;
-    background:var(--color-3);
+    left: 80%;
+    top: 83%;
+    background-image: linear-gradient(90deg, #9df205, #89cb12);
     border-radius: 0 100px 0 100px;
 }
 .plant .leaf2 {
@@ -443,9 +584,9 @@ to {
     height: 60px;
     width: 70px;
     transform: translate(-50%, -50%) rotate(-8deg);
-    left: 35%;
-    top: 119%;
-    background:var(--color-3);
+    left: 57%;
+    top: 120%;
+    background-image: linear-gradient(90deg, #9df205, #89cb12);
     border-radius: 0 100px 0 100px;
 }
 .plant .leaf3 {
@@ -453,9 +594,9 @@ to {
     height: 60px;
     width: 60px;
     transform: translate(-50%, -50%) rotate(130deg);
-    left: 72%;
-    top: 102%;
-    background:var(--color-3);
+    left: 93%;
+    top: 106%;
+    background-image: linear-gradient(90deg, #9df205, #89cb12);
     border-radius: 0 100px 0 100px;
 }
 @media only screen and (min-width: 500px) {
